# ppgso-project

./: .gitignore  CMakeLists.txt  ppgso.txt
cmake/: FindGLM.cmake
data/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  ppgso.cbp  result.raw
dependencies/include/GLFW/: glfw3.h
ppgso/: shader.cpp  shader.h  texture.cpp  window.cpp
shader/: bloom_frag.glsl  color_frag.glsl  diffuse_frag.glsl  scene_diffuse_frag.glsl  scene_diffuse_vert.glsl
src/gl9_scene/: asteroid.cpp  boots.cpp  boots.h  camera.cpp  camera.h  ceilinglamp.cpp  ceilinglamp.h  chimney.cpp  chimney.h  coconut.cpp  coconut.h  eyes.cpp  eyes.h  fire.cpp  fire.h  fireplace.cpp  fireplace.h  floor.cpp  floor.h  generator.cpp  generator.h  gl9_scene.cpp  glass.cpp  glass.h  house.cpp  house.h  human.cpp  human.h  island.cpp  island.h  keyframe.cpp  keyframe.h  lamp.cpp  lamp.h  lerp.cpp  lerp.h  mug.cpp  mug.h  object.cpp  object.h  (+33 more)
src/task1_filter/: task1_filter.cpp
src/task2_bresenham/: task2_bresenham.cpp
src/task3_bezier/: task3_bezier.cpp
src/task4_2dshapes/: task4_2dshapes.cpp
src/task5_3d_origin/: task5_3d_origin.cpp
src/task6_bezier_surface/: task6_bezier_surface.cpp
src/task7_particles/: task7_particles.cpp
